; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty_ptmx.c_ptsd_kqops_touch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_tty_ptmx.c_ptsd_kqops_touch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32, %struct.tty* }
%struct.tty = type { i32 }
%struct.kevent_internal_s = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.kevent_internal_s*)* @ptsd_kqops_touch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ptsd_kqops_touch(%struct.knote* %0, %struct.kevent_internal_s* %1) #0 {
  %3 = alloca %struct.knote*, align 8
  %4 = alloca %struct.kevent_internal_s*, align 8
  %5 = alloca %struct.tty*, align 8
  %6 = alloca i32, align 4
  store %struct.knote* %0, %struct.knote** %3, align 8
  store %struct.kevent_internal_s* %1, %struct.kevent_internal_s** %4, align 8
  %7 = load %struct.knote*, %struct.knote** %3, align 8
  %8 = getelementptr inbounds %struct.knote, %struct.knote* %7, i32 0, i32 2
  %9 = load %struct.tty*, %struct.tty** %8, align 8
  store %struct.tty* %9, %struct.tty** %5, align 8
  %10 = load %struct.tty*, %struct.tty** %5, align 8
  %11 = call i32 @tty_lock(%struct.tty* %10)
  %12 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %13 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.knote*, %struct.knote** %3, align 8
  %16 = getelementptr inbounds %struct.knote, %struct.knote* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  %17 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %18 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.knote*, %struct.knote** %3, align 8
  %21 = getelementptr inbounds %struct.knote, %struct.knote* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  %22 = load %struct.knote*, %struct.knote** %3, align 8
  %23 = load %struct.tty*, %struct.tty** %5, align 8
  %24 = call i32 @ptsd_kqops_common(%struct.knote* %22, %struct.tty* %23)
  store i32 %24, i32* %6, align 4
  %25 = load %struct.tty*, %struct.tty** %5, align 8
  %26 = call i32 @tty_unlock(%struct.tty* %25)
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i32 @tty_lock(%struct.tty*) #1

declare dso_local i32 @ptsd_kqops_common(%struct.knote*, %struct.tty*) #1

declare dso_local i32 @tty_unlock(%struct.tty*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
